[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace]
members = [
	'crates/*',
	'cmds/*',
]

[workspace.dependencies]
schema = { package = "immigrant-schema", path = "crates/schema" }
file-diffs = { package = "immigrant-file-diffs", path = "crates/file-diffs" }
cli = { package = "immigrant-cli", path = "crates/cli" }
generator-postgres = { package = "immigrant-generator-postgres", path = "crates/generator-postgres" }

