[workspace.package]
version = "0.1.2"
edition = "2021"

[workspace]
members = [
	'crates/*',
	'cmds/*',
]
resolver = "2"

[workspace.dependencies]
schema = { package = "immigrant-schema", path = "crates/schema" }
file-diffs = { package = "immigrant-file-diffs", path = "crates/file-diffs" }
cli = { package = "immigrant-cli", path = "crates/cli" }
generator-postgres = { package = "immigrant-generator-postgres", path = "crates/generator-postgres" }
anyhow = "1.0.71"
hi-doc = { git = "https://github.com/CertainLach/ass-stroke" }
imara-diff = "0.1.5"
ouroboros = "0.15.6"
patch = "0.7.0"
thiserror = "1.0.40"
clap = { version = "4.4.18", features = ["derive"] }
Inflector = "0.11.4"
tempfile = "3.7.1"
