[package]
name = "immigrant-migrate"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
cli.workspace = true
file-diffs.workspace = true
futures = "0.3.30"
schema.workspace = true
slug = "0.1.5"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "macros"] }
tokio = { version = "1.35.1", features = ["macros"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap.workspace = true
tracing = "0.1.41"
