[package]
name = "immigrant"
version.workspace = true
edition.workspace = true
default-run = "immigrant"

[dependencies]
Inflector = "0.11.4"
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
peg = "0.8.1"
rand = "0.8.5"
slug = "0.1.4"
tempfile = "3.6.0"
thiserror = "1.0.40"
schema.workspace = true
file-diffs.workspace = true
jrsonnet-evaluator = "0.5.0-pre9"
indexmap = "2.0.0"
color-print = "0.3.4"
generator-postgres.workspace = true
cli.workspace = true
