[package]
name = "immigrant"
version.workspace = true
edition.workspace = true
default-run = "immigrant"

[dependencies]
Inflector.workspace = true
anyhow.workspace = true
clap.workspace = true
peg = "0.8.1"
rand = "0.8.5"
slug = "0.1.4"
tempfile.workspace = true
thiserror.workspace = true
schema.workspace = true
file-diffs.workspace = true
jrsonnet-evaluator = "0.5.0-pre9"
indexmap = "2.0.0"
color-print = "0.3.4"
generator-postgres.workspace = true
cli.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
