[package]
name = "immigrant-generator-postgres"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
itertools = "0.11.0"
permutation = "0.4.1"
rand = "0.8.5"
schema.workspace = true
tempfile = "3.7.1"
tracing = "0.1.37"
tracing-test = "0.2.4"
ass-stroke = { git = "https://github.com/CertainLach/ass-stroke", version = "0.1.0" }

[dev-dependencies]
tracing-subscriber = "0.3.17"
