[package]
name = "immigrant-generator-postgres"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
itertools = "0.11.0"
permutation = "0.4.1"
schema.workspace = true
tempfile.workspace = true
tracing = "0.1.37"
tracing-test = "0.2.4"
blake2 = "0.10.6"

[dev-dependencies]
tracing-subscriber = "0.3.17"
