[package]
name = "immigrant-schema"
version.workspace = true
edition.workspace = true

[dependencies]
Inflector = "0.11.4"
derivative = "2.2.0"
itertools = "0.11.0"
paste = "1.0.12"
peg = "0.8.1"
rand = "0.8.5"
replace_with = "0.1.7"
thiserror = "1.0.40"
tracing = "0.1.37"

[dev-dependencies]
tracing-subscriber = "0.3.17"
