[package]
name = "immigrant-schema"
version.workspace = true
edition.workspace = true

[dependencies]
Inflector.workspace = true
base32 = "0.4.0"
blake2 = "0.10.6"
derivative = "2.2.0"
hi-doc.workspace = true
itertools = "0.11.0"
paste = "1.0.12"
peg = "0.8.1"
rand = "0.8.5"
replace_with = "0.1.7"
thiserror.workspace = true
tracing = "0.1.37"

[dev-dependencies]
tracing-subscriber = "0.3.17"
